# otus_homework_11

./: .gitignore  main.py  pyproject.toml
domain/: services.py
infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
tests/test_domain/: test_services.py
tests/test_infrastructure/: test_orm.py
